--- a/app/views/super_heros/show.html.erb
+++ b/app/views/super_heros/show.html.erb
@@ -9,6 +9,14 @@
   <strong>Hero name:</strong>
   <%= @super_hero.hero_name %>
 </p>
-
+<p>
+	<% @super_hero.super_powers.each do |sp|%>
+		<p>
+		<strong>Power:</strong>
+		<%= sp.name %>     
+		<strong>Description:</strong>
+		<%= sp.description %>
+		</p>
+	<% end %>
 <%= link_to 'Edit', edit_super_hero_path(@super_hero) %> |
 <%= link_to 'Back', super_heros_path %>
